WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270103
[LBSE] Fix MotionMark repaint issues
https://bugs.webkit.org/show_bug.cgi?id=270103
Summary
[LBSE] Fix MotionMark repaint issues
Nikolas Zimmermann
Reported
2024-02-26 10:51:29 PST
MotionMark exposes some rendering artifacts when LBSE is activated. Transform changes don't result in relayouts in LBSE -- repainting only repainted the new location, not the old one - fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2024-02-26 10:54:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25118
Radar WebKit Bug Importer
Comment 2
2024-03-04 10:59:35 PST
<
rdar://problem/124020898
>
EWS
Comment 3
2024-03-05 11:32:49 PST
Committed
275702@main
(a78e4b31c440): <
https://commits.webkit.org/275702@main
> Reviewed commits have been landed. Closing PR #25118 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug